welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value estSurBaggle
while(!estSurBaggle())
       ^Variables:6: error: not found: value i
	i = i + 1;
        ^Variables:9: error: not found: value i
while(i != 0)
      ^Variables:12: error: not found: value i
	i = i - 1;
        ^