welcome.lessons.welcome.variables.Variables.scala.code
var x = 0;
while(!estSurBaggle())
{
	avance();
	i = i + 1;
}
prendBiscuit();
while(i != 0)
{
	recule();
	i = i - 1;
}
poseBiscuit();